--- a/app/css/app.css
+++ b/app/css/app.css
@@ -190,13 +190,14 @@ margin-top:10px;
 }
 
 .step2error{
-	border: 2px solid #000;
-	border-radius:10px;
-	font-size:22px;
+	border: 1px solid #000;
+	border-radius:5px;
+	font-size:18px;
 	padding:5px;
 	margin-right:15px;
 	display:inline-block;
 	margin-bottom:10px;
+	background-color:#eee;
 }
 
 .col-header{
