--- a/app/partials/reservation.html
+++ b/app/partials/reservation.html
@@ -387,7 +387,7 @@
 					</div>
 				</div>
 		</div>
-			<button type="submit" class="btn btn-default btn-m booking-btn" ng-disabled="isError()">
+			<button type="button" class="btn btn-default btn-m booking-btn" ng-disabled="isError()" ng-click="formBook()">
 				<i class="glyphicon glyphicon-arrow-right"></i> Book
 			</button>
 	</div>
