added redirect after booking

--- a/app/partials/reservation.html
+++ b/app/partials/reservation.html
@@ -443,3 +443,19 @@
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
+<div class="modal fade" id="successModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Booking Success!</h4>
+      </div>
+      <div class="modal-body">
+        <h4>Thank you for your booking</h4>
+      </div>
+	  <div class="modal-footer">
+        <button type="button" class="btn btn-primary" ng-click="closeNotifBooking()">Close</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
